--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -41,15 +41,6 @@ rspnder + wave 1 sdfds '
 
 
 
-
-
-
-
-
-
-
-
-
 ```
 
 
@@ -58,3 +49,18 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+```{r setup, include=FALSE}
+#Wave 1
+ESS$wave1 <- ifelse(ESS$WAVES == "All waves", 1, ifelse(ESS$WAVES == "Only wave 1", 1, ifelse(ESS$WAVES == "Wave 1 and 2", 1, ifelse(ESS$WAVES == "Wave 1, 2 and 3", 1, 0))))
+
+#Wave 2
+ESS$wave2 <- ifelse(ESS$WAVES == "All waves", 2, ifelse(ESS$WAVES == "Wave 1 and 2", 2, ifelse(ESS$WAVES == "Wave 1, 2 and 3", 2, 0)))
+
+#Wave 3
+ESS$wave3 <- ifelse(ESS$WAVES == "All waves", 3, ifelse(ESS$WAVES == "Wave 1, 2 and 3", 3, 0))
+
+#Wave 4
+ESS$wave4 <- ifelse(ESS$WAVES == "All waves", 4, 0)
+
+```
