Spread waves into 4 columns

--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -50,7 +50,7 @@ plot(pressure)
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
-```{r setup, include=FALSE}
+```{r Spread the waveeeeees}
 #Wave 1
 ESS$wave1 <- ifelse(ESS$WAVES == "All waves", 1, ifelse(ESS$WAVES == "Only wave 1", 1, ifelse(ESS$WAVES == "Wave 1 and 2", 1, ifelse(ESS$WAVES == "Wave 1, 2 and 3", 1, 0))))
 
