tidy columns respondent ID and Waves, create new Waves variables, create columns out of wave 1,2,3,4, and remove WAVES and Waves columns

--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -58,16 +58,23 @@ ESSclean <- select(ESS, -c(INTNR, SAMPLE,	GEWICHTA1_w1,	GEWICHTA1_w2,	GEWICHTA1_
 ESSclean %>% count(WAVES)
 
 #Wave 1
-ESSclean$wave1 <- ifelse(ESSclean$WAVES == "All waves", 1, ifelse(ESSclean$WAVES == "Only wave 1", 1, ifelse(ESSclean$WAVES == "Wave 1 and 2", 1, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 1, 0))))
+ESSclean$wave1 <- ifelse(ESSclean$WAVES == "All waves", 1, ifelse(ESSclean$WAVES == "Only wave 1", 1, ifelse(ESSclean$WAVES == "Wave 1 and 2", 1, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 1, NA))))
 
 #Wave 2
-ESSclean$wave2 <- ifelse(ESS$WAVES == "All waves", 2, ifelse(ESSclean$WAVES == "Wave 1 and 2", 2, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 2, 0)))
+ESSclean$wave2 <- ifelse(ESS$WAVES == "All waves", 2, ifelse(ESSclean$WAVES == "Wave 1 and 2", 2, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 2, NA)))
 
 #Wave 3
-ESSclean$wave3 <- ifelse(ESSclean$WAVES == "All waves", 3, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 3, 0))
+ESSclean$wave3 <- ifelse(ESSclean$WAVES == "All waves", 3, ifelse(ESSclean$WAVES == "Wave 1, 2 and 3", 3, NA))
 
 #Wave 4
-ESSclean$wave4 <- ifelse(ESSclean$WAVES == "All waves", 4, 0)
+ESSclean$wave4 <- ifelse(ESSclean$WAVES == "All waves", 4, NA)
+
+#create columns out of Wave 1, 2, 3, 4
+Essclean <- ESSclean %>% gather(Wave, Wavevalue, wave1:wave4, na.rm = TRUE, convert = FALSE, factor_key = FALSE)
+
+#remove WAVES and Wave columns
+ESSclean$WAVES <- NULL
+ESSclean$Wave <- NULL
 
 
 ```
