--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -53,7 +53,11 @@ RESP_DEMOG #Now we have a table with all fixed characteristics of respondents. W
 
 #@@ NOTE!!! SOME VARIABLES ABOVE HAVE BEEN RECODED already into standard variable names already such as w1_q61 is actualy OPLA (opleiding) 
 
+#Change W3_Q56
+RESP_DEMOG_test <- RESP_DEMOG %>% group_by(RESPNR, w3_q56_CONDITION1_1, w3_q56_CONDITION1_2, w3_q56_CONDITION1_3, w3_q56_CONDITION1_4, w3_q56_CONDITION2_1, w3_q56_CONDITION2_2, w3_q56_CONDITION2_3, w3_q56_CONDITION2_4) %>% select(RESPNR, w3_q56_CONDITION1_1, w3_q56_CONDITION1_2, w3_q56_CONDITION1_3, w3_q56_CONDITION1_4, w3_q56_CONDITION2_1, w3_q56_CONDITION2_2, w3_q56_CONDITION2_3, w3_q56_CONDITION2_4)
 
+#Splitting the Experiment-data
+RESP_DEMOG$W3_Q56_CONDITION <- ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION1_1), 1, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION1_2), 1, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION1_3), 1, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION1_4), 1, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION2_1), 2, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION2_2), 2, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION2_3), 2, ifelse(!is.na(RESP_DEMOG$w3_q56_CONDITION2_4), 2, NA)))))))) 
 
 ```
 
@@ -77,6 +81,9 @@ ESSclean$wave2 <- ifelse(ESS$wave2 == 1, 2, NA)
 ESSclean$wave3 <- ifelse(ESS$wave3 == 1, 3, NA)
 #Wave 4
 ESSclean$wave4 <- ifelse(ESS$wave4 == 1, 4, NA)
+
+#remove WAVES and Wave columns
+ESSclean$Wave <- NULL
 
 #Create one out of Wave 1, 2, 3, 4
 ESSclean <- ESSclean %>% gather(Wave, Wavevalue, wave1:wave4, na.rm = TRUE, convert = FALSE, factor_key = FALSE)
