--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -174,6 +174,13 @@ MUS_POL$ORG7 <- ifelse(MUS_POL$ORG7 == 1, 7, NA)
 #NL4_4
 MUS_POL$ORG8 <- ifelse(MUS_POL$ORG8 == 1, 8, NA)
 
+#combine ORG1:8 into one column
+gather(MUS_POL, ORG, ORG1, ORG2, ORG3, ORG4, ORG5, ORG6, ORG7, ORG8, sep = ",", remove = TRUE)
+
+ORG <- gather()
+
+
+
 #remove WAVES and Wave columns
 ESSclean$Wave <- NULL
 
