--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -215,6 +215,37 @@ getEvaluation <- function(datatable) {
 #call function evaluation
 MUS_POL$evaluation <-  getEvaluation(MUS_POL)
 
+#remove unnecessary variables
+MUS_POL$NL2_1_1 <- NULL
+MUS_POL$NL2_1_2 <- NULL
+MUS_POL$NL2_1_3 <- NULL
+MUS_POL$NL2_2_1 <- NULL
+MUS_POL$NL2_2_2 <- NULL
+MUS_POL$NL2_2_3 <- NULL
+MUS_POL$NL2_3_1 <- NULL
+MUS_POL$NL2_3_2 <- NULL
+MUS_POL$NL2_3_3 <- NULL
+MUS_POL$NL2_4_1 <- NULL
+MUS_POL$NL2_4_2 <- NULL
+MUS_POL$NL2_4_3 <- NULL
+
+MUS_POL$NL3 <- NULL
+
+MUS_POL$NL4_1_1 <- NULL
+MUS_POL$NL4_1_2 <- NULL
+MUS_POL$NL4_1_3 <- NULL
+MUS_POL$NL4_2_1 <- NULL
+MUS_POL$NL4_2_2 <- NULL
+MUS_POL$NL4_2_3 <- NULL
+MUS_POL$NL4_3_1 <- NULL
+MUS_POL$NL4_3_2 <- NULL
+MUS_POL$NL4_3_3 <- NULL
+MUS_POL$NL4_4_1 <- NULL
+MUS_POL$NL4_4_2 <- NULL
+MUS_POL$NL4_4_3 <- NULL
+
+MUS_POL$NL5 <- NULL
+
 CA_FIXED_TV <- CA %>%
   filter(V4 == "NOS Journaal" | V4 == "RTL Nieuws")%>% #Exclude (filter out) the newspapers
   select(V2,	V4, TV1, TV2)
